tests/specs/ecosystem/clappcodes/transporter/0_2_4.test
clappcodes/transporter/0.2.4
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  K extends HTMLElement,
            ~~~~~~~~~~~
    at file://<tmpdir>/readable/from-event.ts:13:13

error: Type checking failed.

